[gd_scene load_steps=2 format=3 uid="uid://0f2ejrm3x4x2"]

[ext_resource type="Script" uid="uid://5e251ibj6mmp" path="res://GUI.gd" id="1"]

[node name="GUI" type="MarginContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="RetryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2

[node name="TimerBarBG" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(980, 20)
layout_mode = 2
color = Color(0.25098, 0.25098, 0.25098, 0.878431)

[node name="TimerBar" type="ColorRect" parent="VBoxContainer/TimerBarBG"]
custom_minimum_size = Vector2(980, 20)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.878431, 0.878431, 0.878431, 1)
